Fixed landing page text being covered on quarter screens

--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -32,6 +32,8 @@
 @media screen and (max-width: 1024px) {
   .main-view {
     margin-top: 15vh;
+    min-height: 60vmax;
+    justify-content: flex-end;
   }
 
   .main-image {
@@ -83,7 +85,13 @@
 
 @media screen and (max-width: 1024px) and (max-height: 1024px) {
   .main-image {
-    width: 65%;
+    width: 80vmin;
+  }
+}
+
+@media screen and (max-width: 1024px) and (min-height: 700px) {
+  .main-image {
+    width: 65vmin;
   }
 }
 
